--- a/ClockWork/client/index.html
+++ b/ClockWork/client/index.html
@@ -2,7 +2,22 @@
   <meta charset="UTF-8">
   <title>Money Baby</title>
 </head>
-<body ng-app="ClockWork">
-<event-feed></event-feed>
+<body ng-app="ClockWork" ng-strict-di="">
+<!--<event-feed></event-feed>-->
+<ion-nav-view></ion-nav-view>
+<ion-tabs class="tabs-positive tabs-icon-top" style="padding-top: 200px">
 
+    <ion-tab title="Home" icon-on="ion-ios-filing" icon-off="ion-ios-filing-outline">
+        <!-- Tab 1 content -->
+    </ion-tab>
+
+    <ion-tab title="About" icon-on="ion-ios-clock" icon-off="ion-ios-clock-outline">
+        <!-- Tab 2 content -->
+    </ion-tab>
+
+    <ion-tab title="Settings" icon-on="ion-ios-gear" icon-off="ion-ios-gear-outline">
+        <!-- Tab 3 content -->
+    </ion-tab>
+
+</ion-tabs>
 </body>
