documented index.html

--- a/ClockWork/client/index.html
+++ b/ClockWork/client/index.html
@@ -3,7 +3,7 @@
   <title>Money Baby</title>
 </head>
 <body ng-app="ClockWork" ng-strict-di="">
-<!--<event-feed></event-feed>-->
+<!--ion nav view will be filled with current route view -->
 <ion-nav-view></ion-nav-view>
 <ion-tabs class="tabs-positive tabs-icon-top" style="padding-top: 200px">
 
