--- a/ClockWork/client/events/event-feed/event-feed.html
+++ b/ClockWork/client/events/event-feed/event-feed.html
@@ -16,7 +16,7 @@ This file implements the view for the event feed
 
     <ion-content scroll scrollbar-y>
         <ion-list ng-repeat="event in events">
-            <ion-item>
+            <ion-item href="#/eventFeed/567">
                 <div class="row">
                     <div class="col col-10">
                         <i class="icon icon-left ion-social-dribbble-outline"></i>
