--- a/ClockWork/client/index.html
+++ b/ClockWork/client/index.html
@@ -5,19 +5,19 @@
 <body ng-app="ClockWork" ng-strict-di="">
 <!--ion nav view will be filled with current route view -->
 <ion-nav-view></ion-nav-view>
-<ion-tabs class="tabs-positive tabs-icon-top" style="padding-top: 200px">
+<!--<ion-tabs class="tabs-positive tabs-icon-top" style="padding-top: 200px">-->
 
-    <ion-tab title="Home" icon-on="ion-ios-filing" icon-off="ion-ios-filing-outline">
-        <!-- Tab 1 content -->
-    </ion-tab>
+    <!--<ion-tab title="Home" icon-on="ion-ios-filing" icon-off="ion-ios-filing-outline">-->
+        <!--&lt;!&ndash; Tab 1 content &ndash;&gt;-->
+    <!--</ion-tab>-->
 
-    <ion-tab title="About" icon-on="ion-ios-clock" icon-off="ion-ios-clock-outline">
-        <!-- Tab 2 content -->
-    </ion-tab>
+    <!--<ion-tab title="About" icon-on="ion-ios-clock" icon-off="ion-ios-clock-outline">-->
+        <!--&lt;!&ndash; Tab 2 content &ndash;&gt;-->
+    <!--</ion-tab>-->
 
-    <ion-tab title="Settings" icon-on="ion-ios-gear" icon-off="ion-ios-gear-outline">
-        <!-- Tab 3 content -->
-    </ion-tab>
+    <!--<ion-tab title="Settings" icon-on="ion-ios-gear" icon-off="ion-ios-gear-outline">-->
+        <!--&lt;!&ndash; Tab 3 content &ndash;&gt;-->
+    <!--</ion-tab>-->
 
-</ion-tabs>
+<!--</ion-tabs>-->
 </body>
