--- a/ClockWork/client/index.html
+++ b/ClockWork/client/index.html
@@ -1,23 +1,23 @@
 <head>
-  <meta charset="UTF-8">
-  <title>Money Baby</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <title>Yooo</title>
 </head>
-<body ng-app="ClockWork" ng-strict-di="">
-<!--ion nav view will be filled with current route view -->
+
+<body>
+<!--
+  The nav bar that will be updated as we navigate between views.
+-->
+<ion-nav-bar class="bar-stable">
+    <ion-nav-back-button>
+    </ion-nav-back-button>
+</ion-nav-bar>
+<!--
+  The views will be rendered in the <ion-nav-view> directive below
+  Templates are in the /templates folder (but you could also
+  have templates inline in this html file if you'd like).
+-->
 <ion-nav-view></ion-nav-view>
-<!--<ion-tabs class="tabs-positive tabs-icon-top" style="padding-top: 200px">-->
 
-    <!--<ion-tab title="Home" icon-on="ion-ios-filing" icon-off="ion-ios-filing-outline">-->
-        <!--&lt;!&ndash; Tab 1 content &ndash;&gt;-->
-    <!--</ion-tab>-->
 
-    <!--<ion-tab title="About" icon-on="ion-ios-clock" icon-off="ion-ios-clock-outline">-->
-        <!--&lt;!&ndash; Tab 2 content &ndash;&gt;-->
-    <!--</ion-tab>-->
-
-    <!--<ion-tab title="Settings" icon-on="ion-ios-gear" icon-off="ion-ios-gear-outline">-->
-        <!--&lt;!&ndash; Tab 3 content &ndash;&gt;-->
-    <!--</ion-tab>-->
-
-<!--</ion-tabs>-->
 </body>
