--- a/ClockWork/client/events/event-feed/event-feed.html
+++ b/ClockWork/client/events/event-feed/event-feed.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Home">
+<ion-view view-title="Event">
 
     <ion-nav-buttons side="right">
         <div class="buttons">
@@ -25,7 +25,7 @@
         </p>
         -->
         <ion-list ng-repeat="event in events">
-            <ion-item href="#/tab/facts">
+            <ion-item href="#/tab/event-detail">
                 <div class="row">
                     <div class="col col-10">
                         <i class="icon icon-left ion-social-dribbble-outline"></i>
