--- a/ClockWork/client/tab/tab.html
+++ b/ClockWork/client/tab/tab.html
@@ -1,7 +1,7 @@
 <ion-tabs class="tabs-icon-top tabs-positive">
 
     <ion-tab title="Home" icon="ion-home" href="#/tab/home">
-        <ion-nav-view name="home-tab"></ion-nav-view>
+        <ion-nav-view name="event-tab"></ion-nav-view>
     </ion-tab>
 
     <ion-tab title="About" icon="ion-ios-information" href="#/tab/about">
