--- a/ClockWork/client/events/event-detail/event-detail.html
+++ b/ClockWork/client/events/event-detail/event-detail.html
@@ -1,16 +1,23 @@
+<!--
+    Authors: Cullin Lam, Andry Lora
+    Created on: 2/16/2016
+    file: event-detail.html
+    This file displays the view for event detail
+     issues:
+        -2/16/2016
+            ion nav bar title does not show on ios
+            native require swipe right to go back
+     fixed:
+        -2/18/2016
+        by: Son Nguyen
+        comment: Don't use the meteor directive way in the routes.js. It will work but, it will break
+                 ionic's views and functionality.
+        source: https://github.com/driftyco/ionic-starter-tabs
+                http://codepen.io/ionic/pen/odqCz
+-->
+
 <ion-view view-title="Facts">
     <ion-content class="padding">
-        <!--
-        <p>Banging your head against a wall uses 150 calories an hour.</p>
-        <p>Dogs have four toes on their hind feet, and five on their front feet.</p>
-        <p>The ant can lift 50 times its own weight, can pull 30 times its own weight and always falls over on its right side when intoxicated.</p>
-        <p>A cockroach will live nine days without it's head, before it starves to death.</p>
-        <p>Polar bears are left handed.</p>
-        <p>
-            <a class="button icon ion-home" href="#/tab/home"> Home</a>
-            <a class="button icon icon-right ion-chevron-right" href="#/tab/facts2">More Facts</a>
-        </p>
-        -->
         <div class="card" style="padding-left: 50px"><div>
             <p>{{name}}</p>
         </div>
@@ -27,6 +34,5 @@
         <div>
             <p>{{event.loc}}</p>
         </div>
-
     </ion-content>
 </ion-view>
