--- a/ClockWork/client/events/event-feed/event-feed.html
+++ b/ClockWork/client/events/event-feed/event-feed.html
@@ -1,3 +1,16 @@
+<!--
+    Authors: Cullin Lam, Son Nguyen
+    Created on: 2/14/16
+    file: /ClockWork/events/event-feed/event-feed.html
+
+    This file displays the view for event feed
+
+    Last Edited: 2/21/2012
+        By: Son Nguyen
+        Comment: Added controllerAs EventFeed to access functions and variables in eventFeedCtrl and removeEvent().
+                 Using the future Angular 2 style of controllerAs help to know what controller is being use.
+-->
+
 <ion-view view-title="Event">
 
     <ion-nav-buttons side="right">
@@ -8,23 +21,7 @@
     </ion-nav-buttons>
 
     <ion-content class="padding">
-        <!--
-        <ion-list>
-            <ion-item href="#/tab/facts">
-                111111111
-            </ion-item>
-            <ion-item href="#/tab/facts">
-                222222222
-            </ion-item>
-            <ion-item href="#/tab/facts">
-                333333333
-            </ion-item>
-        </ion-list>
-        <p>
-            <a class="button icon icon-right ion-chevron-right" href="#/tab/facts">Scientific Facts</a>
-        </p>
-        -->
-        <ion-list ng-repeat="event in events">
+        <ion-list ng-repeat="event in EventFeed.events">
             <ion-item href="#/tab/event-detail">
                 <div class="row">
                     <div class="col col-10">
@@ -39,9 +36,7 @@
                     </div>
                     <div class="col col-30">
 
-
                         <i class="icon ion-android-alarm-clock"></i>
-
                         <h3>{{event.expire | date:"short"}}</h3>
 
                     </div>
@@ -52,14 +47,11 @@
                         <!--<i class="icon ion-chevron-right icon-accessory"></i>-->
                     </div>
 
-                    <ion-option-button class="button-assertive" ng-click="remove(chat)">
+                    <ion-option-button class="button-assertive" ng-click="EventFeed.removeEvent(event)">
                         Delete
                     </ion-option-button>
                 </div>
             </ion-item>
         </ion-list>
-
-
-
     </ion-content>
 </ion-view>
