--- a/ClockWork/client/events/event-feed/event-feed.html
+++ b/ClockWork/client/events/event-feed/event-feed.html
@@ -39,7 +39,8 @@
 
                         <i class="icon ion-android-alarm-clock"></i>
                         <h3>{{event.time_expire | date:"short"}}</h3>
-
+                        <!--<timer end-time="{{event.time_expire}}">{{days}} days, {{hours}} hours, {{minutes}} minutes, {{seconds}} seconds.</timer>-->
+                        <!--<timer interval="1000">{{5}} hour{{4}}, {{34}} minute{{45}}, {{21}} second{{20}}.</timer>-->
                     </div>
                     <div class="col col-20">
                         <i class="icon ion-person-stalker"></i>
