--- a/ClockWork/client/events/event-detail/event-detail.html
+++ b/ClockWork/client/events/event-detail/event-detail.html
@@ -30,7 +30,7 @@
                 <h2>{{EventDetail.event.title}}</h2>
 
                 <h3>{{EventDetail.event.time_expire | date:"short"}}</h3>
-                <h4>{{EventDetail.time_count | secondsToDateTime | date:'HH:mm:ss'}}</h4>
+                <countdown-timer></countdown-timer>
 
                 <p>{{EventDetail.event.description}}</p>
             </div>
