Added documentation cleaned up code

--- a/ClockWork/client/events/event-detail/event-detail.html
+++ b/ClockWork/client/events/event-detail/event-detail.html
@@ -19,6 +19,9 @@
         - Fixed controller references
         - Added Ng-Hide on cap var
         - Need to implement attendee list once users added
+
+    -2/27/16 C Lam
+        -utilizes countdown-timer directive
 -->
 
 <ion-view view-title="Facts">
