added expired filter to event feed and added server code to set expired field

--- a/ClockWork/client/events/event-feed/event-feed.html
+++ b/ClockWork/client/events/event-feed/event-feed.html
@@ -42,7 +42,7 @@
                     <div class="col col-30">
 
                         <i class="icon ion-android-alarm-clock"></i>
-                        <h3>{{event.time_expire | date:"short"}}</h3>
+                        <!--<h3>{{event.time_expire | date:"short"}}</h3>-->
                         <countdown-timer></countdown-timer>
                     </div>
                     <div class="col col-20">
