--- a/ClockWork/client/index.html
+++ b/ClockWork/client/index.html
@@ -4,7 +4,7 @@
     <title>ClockWork</title>
 </head>
 
-<body>
+<body ng-controller="MainCtrl">
 <!--
   The nav bar that will be updated as we navigate between views.
 -->
