New validation Added
Finished validation. Fixed the bug that I didn't like.
In line 89. of addEvent_modal.html . Call timeReset() before addEvent().
addEvent reset everything after call. Therefore if it is called before
anything else then it'll reset and break any functions after it.

--- a/ClockWork/client/modal/addEvent_modal.html
+++ b/ClockWork/client/modal/addEvent_modal.html
@@ -86,7 +86,7 @@
                 </ionic-timepicker>
                 <span style="color:red" ng-show="addEvent.isTime()">Please select time</span>
 
-                <button type="submit" class="button button-dark button-block " ng-click="addEvent.addEvent(eventForm.$valid) && modal.hide() && addEvent.timeReset();">Confirm Event and Post</button>
+                <button type="submit" class="button button-dark button-block " ng-click="addEvent.timeReset() && addEvent.addEvent(eventForm.$valid);">Confirm Event and Post</button>
             </form>
         </div>
     </ion-content>
