Latest commit from cullin

--- a/ClockWork/client/events/event-detail/event-detail.html
+++ b/ClockWork/client/events/event-detail/event-detail.html
@@ -12,8 +12,8 @@
         by: Son Nguyen
         comment: Don't use the meteor directive way in the routes.js. It will work but, it will break
                  ionic's views and functionality.
-        source: https://github.com/driftyco/ionic-starter-tabs
-                http://codepen.io/ionic/pen/odqCz
+        source: https://github.com/driftyco/ionic-starter-t
+                http://codepen.io/ionic/pen/odq
 
      -2/24/16 C Lam
         - Fixed controller references
@@ -22,9 +22,12 @@
 
     -2/27/16 C Lam
         -utilizes countdown-timer directive
+    -3/5/16
+        -CLam
+            -updated view-title
 -->
 
-<ion-view view-title="Facts">
+<ion-view view-title="Detail">
     <ion-content class="padding">
         <div class="card" style="padding-left: 50px"><div>
             <p>{{EventDetail.event.owner}}</p>
